--- a/html/CH9.html
+++ b/html/CH9.html
@@ -10,42 +10,42 @@
     <style>
         body {
             font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-            background-color: #f5f5f7;
-            color: #1d1d1f;
+            background-color: #f5f5f7; /* Apple-like light grey */
+            color: #1d1d1f; /* Apple-like dark grey for text */
         }
         .bento-box {
-            background-color: #ffffff;
-            border-radius: 1.5rem;
+            background-color: #ffffff; /* White boxes */
+            border-radius: 1.5rem; /* Generous rounding */
             padding: 2rem;
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.05), 0 10px 20px rgba(0,0,0,0.05);
-            overflow: hidden;
+            overflow: hidden; /* Ensures content respects border radius */
             display: flex;
             flex-direction: column;
         }
         .bento-title {
-            font-size: 1.75rem;
-            line-height: 2.25rem;
+            font-size: 1.75rem; /* 28px */
+            line-height: 2.25rem; /* 36px */
             font-weight: 700;
             margin-bottom: 1rem;
             color: #1d1d1f;
         }
         .bento-title-large {
-            font-size: 2.5rem;
-            line-height: 3rem;
+            font-size: 2.5rem; /* 40px */
+            line-height: 3rem; /* 48px */
             font-weight: 700;
             margin-bottom: 1.5rem;
         }
         .bento-subtitle {
-            font-size: 1.125rem;
+            font-size: 1.125rem; /* 18px */
             font-weight: 600;
-            color: #0071e3;
+            color: #0071e3; /* Apple blue for subtitles/accents */
             margin-top: 0.5rem;
             margin-bottom: 0.5rem;
         }
         .bento-text {
-            font-size: 1rem;
-            line-height: 1.75;
-            color: #333333;
+            font-size: 1rem; /* 16px */
+            line-height: 1.75; /* More spacing for readability */
+            color: #333333; /* Slightly lighter than main text */
         }
         .bento-text strong, .bento-text b {
             font-weight: 600;
@@ -63,12 +63,25 @@
             text-decoration: underline;
         }
         .bento-list {
-            list-style-position: outside;
-            padding-left: 1.5rem;
+            list-style-position: inside; /* Changed to inside for better alignment with bento style */
+            padding-left: 0.5rem; /* Adjust if needed */
         }
         .bento-list li {
-            margin-bottom: 0.5rem;
+            margin-bottom: 0.75rem; /* Increased spacing */
+            padding-left: 1rem; /* Indent list items */
+            position: relative;
         }
+        .bento-list li::before { /* Custom bullet points */
+            content: "\f111"; /* Font Awesome circle icon */
+            font-family: "Font Awesome 6 Free";
+            font-weight: 900;
+            color: #0071e3; /* Apple blue */
+            font-size: 0.5rem;
+            position: absolute;
+            left: -0.25rem;
+            top: 0.5em; /* Adjust vertical alignment */
+        }
+
         .highlight-tech {
             background: linear-gradient(90deg, rgba(0, 113, 227, 0.15) 0%, rgba(0, 113, 227, 0.05) 100%);
             padding: 0.1rem 0.5rem;
@@ -78,49 +91,45 @@
         .icon-large {
             font-size: 3rem;
             margin-bottom: 1rem;
-            color: #0071e3;
+            color: #0071e3; /* Apple blue for icons */
         }
         .content-wrapper {
-            max-width: 1200px;
+            max-width: 1024px;
             margin: 0 auto;
             padding: 2rem;
         }
         .grid-container {
             display: grid;
-            gap: 1.5rem;
+            gap: 1.5rem; /* Spacing between boxes */
             grid-template-columns: repeat(1, minmax(0, 1fr));
         }
-        @media (min-width: 768px) {
+
+        @media (min-width: 768px) { /* md */
             .grid-container {
                 grid-template-columns: repeat(2, minmax(0, 1fr));
             }
         }
-        @media (min-width: 1024px) {
+
+        @media (min-width: 1024px) { /* lg */
             .grid-container {
                 grid-template-columns: repeat(3, minmax(0, 1fr));
             }
             .col-span-lg-1 { grid-column: span 1 / span 1; }
             .col-span-lg-2 { grid-column: span 2 / span 2; }
             .col-span-lg-3 { grid-column: span 3 / span 3; }
+
             .row-span-lg-1 { grid-row: span 1 / span 1; }
             .row-span-lg-2 { grid-row: span 2 / span 2; }
         }
+
         .bento-box > .motion-div-full-height {
             flex-grow: 1;
             display: flex;
             flex-direction: column;
         }
-        .top-info-box {
-            background-color: #e9e9ed;
-            padding: 1.5rem 2rem;
-            border-radius: 1.5rem;
-            margin-bottom: 2rem;
-            box-shadow: 0 2px 4px rgba(0,0,0,0.03);
-            margin: 0 auto;
-            text-align: center;
-        }
+
         .top-info-title {
-            font-size: 2rem;
+            font-size: 2rem; /* 32px */
             font-weight: 700;
             color: #1d1d1f;
             margin-bottom: 0.5rem;
@@ -141,20 +150,67 @@
         .top-info-text a:hover {
             text-decoration: underline;
         }
+        table {
+            width: 100%;
+            border-collapse: collapse;
+            margin-top: 1rem;
+            margin-bottom: 1rem;
+        }
+        th, td {
+            border: 1px solid #e2e8f0; /* Tailwind gray-300 */
+            padding: 0.75rem;
+            text-align: left;
+            font-size: 0.9rem;
+        }
+        th {
+            background-color: #f8f9fa; /* Light gray background for headers */
+            font-weight: 600;
+        }
+        .table-container {
+            overflow-x: auto; /* Allows table to be scrollable on small screens */
+        }
+        .top-info-box {
+            background-color: #e9e9ed;
+            padding: 1.5rem 2rem;
+            border-radius: 1.5rem;
+            margin-bottom: 2rem;
+            box-shadow: 0 2px 4px rgba(0,0,0,0.03);
+            margin: 0 auto;
+            text-align: center;
+        }
     </style>
 </head>
 <body>
     <div id="app" class="content-wrapper">
+
         <div class="top-info-box">
             <h1 class="top-info-title">Deep Learning 101</h1>
             <div class="top-info-text">
-                <p><a href="https://deep-learning-101.github.io/" rel="noopener noreferrer">回上一頁 https://deep-learning-101.github.io/</a></p>
-                <p>The top private AI Meetup in Taiwan, launched on 2016/11/11 @ 83F, Taipei 101</p>
-                <p><strong>台灣曾經最高最早發起的深度學習社群 @ 83F, 台北101</strong></p>
-                <p class="mt-3"><strong>Convolutional Neural Networks @ Deep Learning Book Chapter 9</strong></p>
-                <p><em>2017/04/14</em></p>
+
+            <p align="center">
+            <strong>Deep Learning 101, Taiwan’s pioneering and highest deep learning meetup, launched on 2016/11/11 @ 83F, Taipei 101</strong>
+            </p>
+            <p align="center">
+            AI是一條孤獨且充滿不確定的惶恐旅程，花俏絢麗的收費課程或活動絕非通往成功的捷徑。<br>
+            衷心感謝當時來自不同單位的AI同好參與者實名分享的寶貴經驗；如欲移除資訊還請告知。<br>
+            由 <a href="https://www.twman.org/" target="_blank">TonTon Huang Ph.D.</a> 發起，及其當時任職公司(台灣雪豹科技)無償贊助場地及茶水點心。<br>
+            </p>
+            <p align="center">
+            <a href="https://huggingface.co/spaces/DeepLearning101/Deep-Learning-101-FAQ" target="_blank">
+                <img src="https://github.com/Deep-Learning-101/.github/blob/main/images/DeepLearning101.JPG?raw=true" alt="Deep Learning 101" width="180" style="display:inline-block;"></a>
+                 <a href="https://www.buymeacoffee.com/DeepLearning101" target="_blank" style="display:inline-block;">
+                    <img src="https://cdn.buymeacoffee.com/buttons/v2/default-red.png" alt="Buy Me A Coffee" style="height: 100px !important;width: 180px !important; display:inline-block;">
+            </p>
+            <p align="center">
+            <a href="https://www.youtube.com/@DeepLearning101" target="_blank">YouTube</a> |
+            <a href="https://www.facebook.com/groups/525579498272187/" target="_blank">Facebook</a> |
+            <a href="https://deep-learning-101.github.io/"> 回 GitHub Pages</a> |
+            <a href="http://DeepLearning101.TWMAN.ORG" target="_blank">網站</a> |
+            <a href="https://huggingface.co/DeepLearning101" target="_blank">Hugging Face Space</a>
+            </p>
+                <p class="mt-3"><strong>2017/04/14, Convolutional Neural Networks @ Deep Learning Book Chapter 9</strong></p>
                 <p>
-                    <a href="https://www.youtube.com/watch?v=51cO6Kv37p4" target="_blank" rel="noopener noreferrer"><i class="fab fa-youtube mr-1"></i> Video: Convolutional Networks </a>
+                    <a href="https://www.youtube.com/watch?v=51cO6Kv37p4" target="_blank" rel="noopener noreferrer"><i class="fab fa-youtube mr-1"></i> Video: Convolutional Networks </a><br>
                     <span class="text-xs text-slate-500">(Explore CNN concepts, architectures, and applications)</span>
                 </p>
             </div>
