--- a/html/CH7.html
+++ b/html/CH7.html
@@ -188,7 +188,7 @@
             <div class="top-info-text">
 
             <p align="center">
-            <strong>Deep Learning 101, Taiwan’s pioneering and highest deep learning meetup, launched on 2016/11/11 @ 83F, Taipei 101</strong>
+            <strong>Taiwan’s pioneering and highest deep learning meetup, launched on 2016/11/11 @ 83F, Taipei 101</strong>
             </p>
             <p align="center">
             AI是一條孤獨且充滿不確定的惶恐旅程，花俏絢麗的收費課程或活動絕非通往成功的捷徑。<br>
